domine_lesson4_Javascript1

--- a/Lesson4_ExpenseCalculator/index.html
+++ b/Lesson4_ExpenseCalculator/index.html
@@ -4,8 +4,8 @@
        <!--
           Course:  Web Application Development
           Assignment:  Lesson 4 (JavaScript 1)
-          Author:  
-          Date:   
+          Author: Mariana Domine  
+          Date: October 13th, 2017
           Filename: index.html
        -->
        <meta charset="utf-8" />
@@ -50,6 +50,7 @@
                             <input type="text" id="foodInput" name="food" />
                           </label>
                       </p>
+                     
 
                       <!--************************************************************************************************
                       * Task #1:  Add additional expense categories using the above code as an example.  The 
@@ -64,7 +65,21 @@
                       * HINT:  Use the following variable names:  householdInput, miscellaneousInput, transportationInput
                       *
                       *************************************************************************************************-->
-
+                     <p><label for="householdInput">
+                            Household (cleaning supplies, electric, etc.):
+                            <input type="text" id="householdInput" name="food" />
+                          </label>
+                      </p>
+                      <p><label for="transportationInput">
+                            Transportation (car, gas etc.):
+                            <input type="text" id="transportationInput" name="food" />
+                          </label>
+                      </p>
+                      <p><label for="miscellaneousInput">
+                            Miscellaneous (vacations, etc.):
+                            <input type="text" id="miscellaneousInput" name="food" />
+                          </label>
+                      </p>
                 </fieldset>                 
 
 
